<resources>
    <string name="app_name">MyIM</string>
    <string name="message_hint">Message</string>
    <string name="message_button_description">Send Message</string>
    <string name="nav_chat">聊天</string>
    <string name="nav_contact">好友</string>
    <string name="nav_new_chat">新建聊天</string>
    <string name="nav_new_secret_chat">新建加密聊天</string>
    <string name="nav_add_friend">添加朋友</string>
    <string name="settings">设置</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="default_user_id">userId</string>
    <string name="default_user_name">User Name</string>
    <string name="default_user_mail">user_mail@test.com</string>
    <string name="default_test_message">A greeting used during the Christmas and winter holiday season to recognize the celebration of many holidays.</string>
    <string name="default_receive_time">20:18</string>
    <string name="default_send_time">20:20</string>
    <string name="default_message_count">3</string>
    <string name="default_send_message">Placeholder message</string>
    <string name="default_receive_message">How are you doing?How are you doing? How are you doing?</string>
</resources>
