<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/social_manage_panel"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/nav_chat" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_contact" />
    </group>

    <group
        android:id="@+id/chat_panel"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_chat"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/nav_new_chat" />
        <item
            android:id="@+id/nav_new_secret_chat"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/nav_new_secret_chat" />
        <item
            android:id="@+id/nav_addContact"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/nav_add_friend" />
    </group>

    <group
        android:id="@+id/settings_panel"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help_and_feedback"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help_and_feedback" />
    </group>
</menu>